make responsive, fix button alignment on list

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,9 +16,6 @@ body {
 }
 
 
-.close {
-  display: none;
-}
 
 
 .menu-button {
@@ -107,8 +104,16 @@ body {
   vertical-align: middle;
 }
 
+.right-aligned-content {
+  margin-left: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+
 .buttons-container {
   display: flex;
+  align-items: center;
 }
 
 .down-arrow,
@@ -120,7 +125,6 @@ body {
 
 
 .collapse-button {
-  margin-left: 10px;
   font-size: 0.8rem;
   background-color: transparent;
   border-radius: 10px;
@@ -130,7 +134,6 @@ body {
 
 .edit-task-button,
 .expand-button {
-  margin-left: 10px;
   font-size: 0.8rem;
   background-color: transparent;
   border-radius: 10px;
@@ -139,6 +142,11 @@ body {
   display: none;
 }
 
+.expand-button,
+.collapse-button {
+  margin: 0 15px;
+
+}
 
 
 .list:hover .show{
@@ -160,36 +168,21 @@ body {
 }
 
 .project-info {
-  border: 1px solid black;
-  margin-left: auto;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: flex-end;
+  text-align: center;
 }
 
-.project-section {
-  border: 1px solid black;
-
-}
-
-
-.due-date-section {
-  border: 1px solid black;
-
-}
 
 
 .delete-bin {
   width: 35px;
- }
+}
  
 .delete-bin-button {
   border: none;
   cursor: pointer;
   background-color: transparent;
   border-radius: 15px;
-  padding: 2px 5px;
+  margin-left: 10px;
  }
  
 .delete-bin-button:hover {
@@ -392,12 +385,7 @@ ul {
 
 
 @media screen and (max-width: 780px) {
-
-  .close {
-    display: none;
-  }
-
-
+ 
   .todo-app {
     display: block;
   }
@@ -441,8 +429,8 @@ ul {
   }
 
   .nav-links.open {
-    clip-path: circle(1100px at 10% -10%);
-    -webkit-clip-path: circle(1100px at 10% -10%);
+    clip-path: circle(1200px at 10% -10%);
+    -webkit-clip-path: circle(1200px at 10% -10%);
 
   }
 
@@ -458,6 +446,37 @@ ul {
 
   .show {
     display: inline-flex;
+  }
+ 
+
+  .right-aligned-content {
+    margin-left: auto;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column-reverse;
+  }
+
+  .buttons-container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+ 
+
+  .expand-button,
+  .collapse-button {
+    margin: 0;
+
+  }
+
+
+  .delete-bin-button {
+    margin-left: 5px;
+
+  }
+
+  .delete-bin {
+    width: 25px;
   }
 
 
